--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "web3": "^1.7.5"
   },
   "devDependencies": {
+    "@truffle/hdwallet-provider": "^2.0.14",
     "@types/node": "^18.7.15",
     "@types/react": "^18.0.18",
     "autoprefixer": "^10.4.8",
