--- a/.env.development
+++ b/.env.development
@@ -1,3 +1,9 @@
-NEXT_PUBLIC_TARGET_CHAIN_ID = 1337
-NEXT_PUBLIC_NETWORK_ID = 5777
+# Ganache Network
+# NEXT_PUBLIC_TARGET_CHAIN_ID = 1337
+# NEXT_PUBLIC_NETWORK_ID = 5777
+
+# Ropsten Network
+NEXT_PUBLIC_TARGET_CHAIN_ID = 3
+NEXT_PUBLIC_NETWORK_ID = 3
+
 NEXT_PUBLIC_ETHERSCAN_API_TOKEN = 8EEEU6ZJSU2VRAV766H8HSJBFZ3J56AD4Z
