--- a/.env.development
+++ b/.env.development
@@ -3,7 +3,11 @@
 # NEXT_PUBLIC_NETWORK_ID = 5777
 
 # Ropsten Network
-NEXT_PUBLIC_TARGET_CHAIN_ID = 3
-NEXT_PUBLIC_NETWORK_ID = 3
+# NEXT_PUBLIC_TARGET_CHAIN_ID = 3
+# NEXT_PUBLIC_NETWORK_ID = 3
+
+# Goerli Network
+NEXT_PUBLIC_TARGET_CHAIN_ID = 5
+NEXT_PUBLIC_NETWORK_ID = 5
 
 NEXT_PUBLIC_ETHERSCAN_API_TOKEN = 8EEEU6ZJSU2VRAV766H8HSJBFZ3J56AD4Z
